# supersede

./: .gitignore  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  feature.yml
.github/workflows/: ci.yml
docs/findings/: v0-agentic.md  v0-incontext.md  v1-longmemeval.md
environments/supersede/: README.md  pyproject.toml  supersede.py
research paper/: pdfa.xmpi  refs.bib  sample-1col.abs  sample-1col.tex  sample-1col.xmpdata
scripts/: eval_agentic.py  eval_local.py  eval_longmemeval.py  eval_memory_ops.py  eval_scale.py  make_figures.py  probe_deletion.py  sim_loop.py  sweep_updates.py  validate_env.py
src/supersede/: __init__.py  dataset.py  env.py  models.py  reward.py  rollout.py  scoring.py  temporal.py  timeline.py
tests/: test_reward.py  test_rollout.py  test_temporal.py
